fix(overlay): text align and statuses
Align overlay text to the left
Show status on top of the overlay

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -292,6 +292,7 @@ div#keyValuePairs input {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 5;
 }
 
 .status.error {
@@ -405,6 +406,7 @@ div#keyValuePairs input {
   z-index: 3;
   padding: 10% 0;
   overflow: auto;
+  text-align: left;
 }
 
 .overlay .title {
